added Utils service to detect fiat currency and implemented rounding for orders and balance tables.

--- a/src/app/funds/balance/balance-table/balance-table.component.html
+++ b/src/app/funds/balance/balance-table/balance-table.component.html
@@ -33,19 +33,19 @@
           </div>
         </td>
         <td class="table__cell table__cell--tal">
-          <span>{{+item.activeBalance + +item.reservedByOrders}}</span>
+          <span>{{(+item.activeBalance + +item.reservedByOrders) | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</span>
         </td>
         <td class="table__cell table__cell--tar">
-          <span>{{item.activeBalance}}</span>
+          <span>{{item.activeBalance | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</span>
         </td>
         <td class="table__cell table__cell--tar">
-          <span>{{item.onConfirmation}}</span>
+          <span>{{item.onConfirmation | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</span>
         </td>
         <td class="table__cell table__cell--tar">
-          <span>{{item.reservedByMerchant}}</span>
+          <span>{{item.reservedByMerchant | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</span>
         </td>
         <td class="table__cell table__cell--tar">
-          <span>{{item.reservedByOrders}}</span>
+          <span>{{item.reservedByOrders | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</span>
         </td>
         <!-- <td class="table__cell table__cell--tar">
           <div class="balance__change">
