--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -70,16 +70,28 @@
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
-      <span>{{item.exExchangeRate | replaceNumber}} {{item.currencyPairName | splitCurrency: 2}}</span>
+      <span>
+        {{item.exExchangeRate | roundCurrency: isFiat(item.currencyPairName, 2) | formatCurrency}}
+        {{item.currencyPairName | splitCurrency: 2}}
+      </span>
     </td>
     <td class="table__cell">
-      <span>{{item.amountBase | replaceNumber}} {{item.currencyPairName | splitCurrency: 1}}</span>
+      <span>
+        {{item.amountBase | roundCurrency: isFiat(item.currencyPairName, 1 ) | formatCurrency}}
+        {{item.currencyPairName | splitCurrency: 1}}
+      </span>
     </td>
     <td class="table__cell txt-grey">
-      <span>{{item.commissionFixedAmount | replaceNumber}} {{item.currencyPairName | splitCurrency: 2}}</span>
+      <span>
+        {{item.commissionFixedAmount | roundCurrency: isFiat(item.currencyPairName, 2) | formatCurrency}}
+        {{item.currencyPairName | splitCurrency: 2}}
+      </span>
     </td>
     <td class="table__cell">
-      <span>{{item.amountWithCommission | replaceNumber}} {{item.currencyPairName | splitCurrency: 2}}</span>
+      <span>
+        {{item.amountWithCommission | roundCurrency: isFiat(item.currencyPairName, 2) | formatCurrency}}
+        {{item.currencyPairName | splitCurrency: 2}}
+      </span>
     </td>
     <td class="table__cell">
       <span>{{item.status}}</span>
