--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -20,7 +20,7 @@
   <form action="">
     <div class="balance__filters">
       <div class="wrap-input wrap-input--with-icon balance__search-mob">
-        <ng-select 
+        <ng-select
           class="custom"
           [items]="currTab === Tab.CRYPTO ? cryptoCurrenciesForChoose : fiatCurrenciesForChoose"
           bindLabel="name"
@@ -67,8 +67,8 @@
             <th class="table__cell-head table__cell-head--tar">Price</th>
           </tr>
         </thead>
-        <tbody 
-          class="table__body table__body--none-shadow" 
+        <tbody
+          class="table__body table__body--none-shadow"
         >
           <ng-container *ngFor="let item of balances">
             <tr class="table__row--mob" (click)="onShowMobDetails(item)">
@@ -84,11 +84,11 @@
                 </div>
               </td>
               <td class="table__cell table__cell--tal">
-                <span>{{item.activeBalance}}</span>
+                <span>{{item.activeBalance  | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</span>
               </td>
               <td class="table__cell table__cell--tar">
-                <div *ngIf="priceIn === currencies.BTC">BTC {{item.btcAmount}}</div>
-                <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount}}</div>
+                <div *ngIf="priceIn === currencies.BTC">BTC {{item.btcAmount | roundCurrency | formatCurrency}}</div>
+                <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount | roundCurrency: true | formatCurrency}}</div>
                 <!-- <span class="txt-small txt-red">–0.24%</span> -->
               </td>
               <td class="table__cell table__cell--arr-mob">
@@ -119,22 +119,22 @@
   <!--</svg>-->
   <!--</div>-->
   <div class="tabs balance__tabs-mob">
-    <button 
-      class="tabs__item" 
+    <button
+      class="tabs__item"
       [ngClass]="{'tabs__item--active': currTab === Tab.CRYPTO}"
       (click)="onSelectTab.emit(Tab.CRYPTO)"
     >
       Crypto
     </button>
-    <button 
-      class="tabs__item" 
+    <button
+      class="tabs__item"
       [ngClass]="{'tabs__item--active': currTab === Tab.FIAT}"
       (click)="onSelectTab.emit(Tab.FIAT)"
     >
       Fiat
     </button>
-    <button 
-      class="tabs__item" 
+    <button
+      class="tabs__item"
       [ngClass]="{'tabs__item--active': currTab === Tab.PR}"
       (click)="onGoToPendingReq()"
     >
