--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -560,13 +560,8 @@
     display: flex;
     flex-direction: column;
 
-    &__wrap-hidden-links {
-      display: none;
-
-      &--show {
-        display: block;
-        margin-left: 40px;
-      }
+    &__wrap-links {
+      margin-left: 42px;
     }
 
     &__link {
@@ -600,8 +595,11 @@
         background: linear-gradient(to right, rgba(33, 65, 125, .5), rgba(25, 26, 57, .5));
         box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
 
-        .menu-mob__link-line {
+        &:before {
           display: none;
+        }
+        &:after{
+          transform: rotate(180deg);
         }
       }
 
@@ -610,8 +608,8 @@
           display: block;
           position: absolute;
           right: 16px;
-          width: 9px;
-          height: 9px;
+          width: 12px;
+          height: 12px;
           background-image: url("../../assets/img/arr-toggler-down-light-blue.svg");
           background-repeat: no-repeat;
           background-position: center;
@@ -652,8 +650,8 @@
 
     &__link-holdings-inf {
       color: $light-blue;
-      position: absolute;
-      right: 40px;
+      margin-left: auto;
+      white-space: nowrap;
     }
   }
   .holdings-mob {
