--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.scss
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.scss
@@ -1,3 +1,13 @@
 re-captcha{
   margin: 0 auto;
 }
+
+.btn--error {
+  background-color: #EB5757 !important;
+  color: #ffffff;
+  border: none;
+}
+
+.wrap-input__message {
+  color: #EB5757 !important;
+}
