--- a/src/assets/scss/pages/_balance.scss
+++ b/src/assets/scss/pages/_balance.scss
@@ -155,6 +155,12 @@
         margin-right: 4px;
       }
     }
+    &__content{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: calc(100% - 42px);
+    }
     &__row {
       position: relative;
       display: flex;
@@ -204,8 +210,9 @@
     &__btn-wrap {
       display: flex;
       width: 100%;
-      position: absolute;
-      bottom: 0;
+      margin-top: 32px;
+      //position: absolute;
+      //bottom: 0;
     }
   }
   //open-mob-balance end
