--- a/src/assets/scss/components/_banner.scss
+++ b/src/assets/scss/components/_banner.scss
@@ -8,6 +8,12 @@
 /*--- elements end ---*/
 /*--- media start ---*/
 @media (min-width: 1200px) {
+  .banner-wrap{
+    text-decoration: none;
+    &:hover{
+      text-decoration: none;
+    }
+  }
   .banner {
     display: flex;
     align-items: center;
@@ -18,6 +24,18 @@
     background-repeat: no-repeat;
     background-position: top center;
     font-family: 'Montserrat';
+    &__logo {
+      display: flex;
+      align-items: center;
+      margin-left: 30px;
+      .text {
+        font-size: 14px;
+        font-weight: bold;
+        margin-left: 8px;
+        text-transform: uppercase;
+        color: #fff;
+      }
+    }
     &__text {
       position: relative;
       z-index: 2;
@@ -45,9 +63,6 @@
     &__nommo {
       margin-left: 40px;
       height: 100%;
-      -webkit-background-size: cover;
-      background-size: cover;
-      background-repeat: no-repeat;
     }
     &__btn {
       margin-left: auto;
@@ -60,6 +75,9 @@
       border: none;
       &:hover {
         cursor: pointer;
+      }
+      &:active{
+        outline: none;
       }
       span {
         display: inline-block;
