--- a/src/assets/scss/components/_currency-pair-info.scss
+++ b/src/assets/scss/components/_currency-pair-info.scss
@@ -13,7 +13,7 @@
   &__inner {
     display: flex;
     align-items: center;
-    max-width: 1440px;
+    max-width: 1464px;
     width: 100%;
     height: 100%;
     padding: 0 16px;
@@ -98,7 +98,8 @@
       display: none;
     }
     &__inner {
-      padding: 0 32px;
+      //padding: 0 32px;
+      padding: 0 16px;
     }
     &__pair {
       min-width: 180px;
