--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -1,6 +1,6 @@
 
 <div class="title refill__title" *ngIf="activeCrypto">Make crypto deposit in <span>{{activeCrypto.name}}</span></div>
-<div class="refill__inputs-wrap" *ngIf="cryptoDataByName">
+<div class="refill__inputs-wrap">
   <div class="select refill__select">
     <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
       <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
