DEVEX-415 fixed the issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,6 +50,9 @@
         <app-recovery-pass></app-recovery-pass>
       </div>
 
+      <div *ngIf="isOpenAlreadyRegisteredPopup">
+        <app-already-registered-popup></app-already-registered-popup>
+      </div>
       <div *ngIf="isOpenDemoTradingPopup">
         <app-demo-trading-popup
         [message]="popupService.demoPopupMessage"
