add footer pages DEVEX-746

--- a/src/app/static-pages/about-us/about-us.component.html
+++ b/src/app/static-pages/about-us/about-us.component.html
@@ -1,3 +1,50 @@
-<p>
-  about-us works!
-</p>
+<div class="container">
+  <div class="static-pages">
+    <div class="page-title">
+      <h1 class="page-title__text">
+        About us
+      </h1>
+    </div>
+    <p class="static-pages__paragraph">Exrates is an actively-growing platform. Creating comfortable and practical conditions for using the Exchange is our priority.</p>
+    <h6 class="subtitle">This is</h6>
+    <ul class="static-pages__list">
+      <li>Minimum commission:</li>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">The Exchange takes a minimum commission for input and output means;</p>
+      <li>Maximum security:</li>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">Potential errors, that could harm the data storage security, have been provided and corrected.</p>
+      <li>Easy usability:</li>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">We have engaged experienced users of exchange systems and assistants without experience with exchanges for
+        help in the development of usability.
+        The results is a high-quality optimal concept that will change and improve according to the new trends in the development of exchanges.</p>
+      <li>Сurrency</li>
+      <p class="static-pages__paragraph static-pages__paragraph--grey"> Exchange provides an opportunity not only to exchange currency such heavyweights as Bitcoin, but the actual
+        perspective cryptocurrency such as EDRCoin.
+        <br>You can also refill/withdraw and exchange USD, EUR, RUB, UAH, IDR to cryptocurrency.</p>
+      <li>Transfers between usersy</li>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">You need to know ONLY users nickname at the system for money transfer.</p>
+      <li>ONLINE LIVE SUPPORT CHAT 24/7</li>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">Our support team is always online and ready to help you!</p>
+      <li>Not only English localization</li>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        You can choose the most comfortable language:
+        <br>
+        - English
+        <br>
+        - Русский
+        <br>
+        - Indonesia
+      </p>
+      <li>Exchange tools:</li>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        Our playground is suitable for both beginners who want to exchange their money with another user at the market rate, and experienced traders.
+      </p>
+    </ul>
+    <p class="static-pages__paragraph"><b>We are working hard for making Exrates.me better!</b></p>
+
+    <p class="static-pages__paragraph"><b>We improve our service and looking for new best options for growing up!</b></p>
+
+    <p class="static-pages__paragraph"><b>We want YOU to feel comfortable and satisfied!</b></p>
+
+    <p class="static-pages__paragraph"><b>We want YOU to choose US!</b></p>
+  </div>
+</div>
