--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -12,6 +12,7 @@
 @import "components/arrow";
 @import "components/table";
 @import "components/input";
+@import "components/textarea";
 @import "components/input-file";
 @import "components/select";
 @import "components/datepicker";
@@ -56,3 +57,4 @@
 @import "pages/settings/2fa/settings-2fa";
 @import "pages/settings/nickname/settings-nickname";
 @import "pages/settings/kyc/settings-kyc";
+@import "pages/footer-pages";
