--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -69,7 +69,7 @@
           <label class="radio">
             <input class="radio__input" type="radio" name="radio-procent">
             <span class="radio__text" [ngClass]="{'radio__text__checked': percents === 100}"
-                  (click)="selectedPercent(100)">
+                  (click)="calculateAmountByTotal(userBalance)">
           100%
         </span>
           </label>
@@ -129,7 +129,7 @@
       <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
         <div class="avaliable">
           <span style="vertical-align: middle; margin-right: 4px;">Available: </span>
-          <a href="#"> {{ userBalance  | number:'1.1-8' | replaceNumber}} {{arrPairName[1]}}</a>
+          <a (click)="calculateAmountByTotal(userBalance)"> {{ userBalance  | number:'1.1-8' | replaceNumber}} {{arrPairName[1]}}</a>
         </div>
         <div>
           Fee: {{order.commission | number:'1.1-8' | replaceNumber}} {{arrPairName[1]}}
@@ -247,7 +247,7 @@
         <label class="radio">
           <input class="radio__input" type="radio" name="radio-procent">
           <span class="radio__text" [ngClass]="{'radio__text__checked': percents === 100}"
-                (click)="selectedPercent(100)">
+                (click)="calculateAmountByTotal(userBalance)">
           100%
         </span>
         </label>
@@ -308,7 +308,7 @@
         </span>
           <span style="vertical-align: middle;">Avaliable: </span>
         </span>
-          <a href="#">{{ userBalance  | number:'1.1-8' | replaceNumber}} {{arrPairName[1]}}</a>
+          <a (click)="calculateAmountByTotal(userBalance)">{{ userBalance  | number:'1.1-8' | replaceNumber}} {{arrPairName[1]}}</a>
         </div>
       </div>
       <div class="row widget__percent-row">
@@ -343,7 +343,7 @@
         <label class="radio">
           <input class="radio__input" type="radio" name="radio-procent">
           <span class="radio__text" [ngClass]="{'radio__text__checked': percents === 100}"
-                (click)="selectedPercent(100)">
+                (click)="calculateAmountByTotal(userBalance)">
           100%
         </span>
         </label>
